{
  "version": 4,
  "terraform_version": "0.12.13",
  "serial": 195,
  "lineage": "b0743246-8f68-da22-3ead-af1ff2fc2239",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0751b0952ac8b6b5f",
            "public_dns": "ec2-3-208-201-213.compute-1.amazonaws.com",
            "public_ip": "3.208.201.213",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "Elastic IP"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.kubernetes-server",
      "mode": "managed",
      "type": "aws_eip",
      "name": "ip",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0781ce98a4bc1b17b",
            "domain": "vpc",
            "id": "eipalloc-01e38c01d31daac4a",
            "instance": "i-0caeb95426a67d1b2",
            "network_interface": "eni-0eb8134499aa9d574",
            "private_dns": "ip-10-0-204-198.ec2.internal",
            "private_ip": "10.0.204.198",
            "public_dns": "ec2-54-174-143-102.compute-1.amazonaws.com",
            "public_ip": "54.174.143.102",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "server_eip"
            },
            "vpc": true
          },
          "depends_on": [
            "aws_instance.kubernetes-server"
          ]
        }
      ]
    },
    {
      "module": "module.kubernetes-server",
      "mode": "managed",
      "type": "aws_instance",
      "name": "kubernetes-server",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04b9e92b5572fa0d1",
            "arn": "arn:aws:ec2:us-east-1:213745435605:instance/i-0caeb95426a67d1b2",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0caeb95426a67d1b2",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "terraform-aws",
            "monitoring": false,
            "primary_network_interface_id": "eni-0eb8134499aa9d574",
            "private_dns": "ip-10-0-204-198.ec2.internal",
            "private_ip": "10.0.204.198",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 150,
                "volume_id": "vol-08f72b92e66f70b6f",
                "volume_size": 50,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07372b84743674040",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0074a17bcc4ea0f08"
            ]
          },
          "depends_on": [
            "aws_security_group.kubernetes-server-instance-sg"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0a8a124022b2121ad",
            "owner_id": "213745435605",
            "tags": {
              "Name": "Internet-Gateway"
            },
            "vpc_id": "vpc-0764e590e1fdf1dd6"
          },
          "depends_on": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat-gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0751b0952ac8b6b5f",
            "id": "nat-0bb90adff8c50be70",
            "network_interface_id": "eni-09b9603241313e7ec",
            "private_ip": "10.0.49.102",
            "public_ip": "3.208.201.213",
            "subnet_id": "subnet-0ad85a5b85af6d92b"
          },
          "depends_on": [
            "aws_eip.eip",
            "aws_subnet.master_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt_private",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0b061766857e9457a",
            "owner_id": "213745435605",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-0bb90adff8c50be70",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "vpc_id": "vpc-0764e590e1fdf1dd6"
          },
          "depends_on": [
            "aws_nat_gateway.nat-gw",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt_public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-021ddd443d3700e39",
            "owner_id": "213745435605",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a8a124022b2121ad",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public_route_table"
            },
            "vpc_id": "vpc-0764e590e1fdf1dd6"
          },
          "depends_on": [
            "aws_internet_gateway.igw",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "master",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0603ec2f62f5840c4",
            "route_table_id": "rtb-021ddd443d3700e39",
            "subnet_id": "subnet-0ad85a5b85af6d92b"
          },
          "depends_on": [
            "aws_route_table.rt_public",
            "aws_subnet.master_subnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bb1cd05e475bf1f0",
            "route_table_id": "rtb-021ddd443d3700e39",
            "subnet_id": "subnet-052d9540f3b2a49f8"
          },
          "depends_on": [
            "aws_route_table.rt_public",
            "aws_subnet.master_subnet"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e7e35b79a8af2d29",
            "route_table_id": "rtb-021ddd443d3700e39",
            "subnet_id": "subnet-0fa7826ce07be5802"
          },
          "depends_on": [
            "aws_route_table.rt_public",
            "aws_subnet.master_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_sub",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c1e6a06c42d99550",
            "route_table_id": "rtb-0b061766857e9457a",
            "subnet_id": "subnet-08c6c33233a731358"
          },
          "depends_on": [
            "aws_route_table.rt_private",
            "aws_subnet.private_subnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07046726770be8fad",
            "route_table_id": "rtb-0b061766857e9457a",
            "subnet_id": "subnet-075b1d4d3ad4addfc"
          },
          "depends_on": [
            "aws_route_table.rt_private",
            "aws_subnet.private_subnet"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e283f25af0afed41",
            "route_table_id": "rtb-0b061766857e9457a",
            "subnet_id": "subnet-06ae52c12fb1e93d8"
          },
          "depends_on": [
            "aws_route_table.rt_private",
            "aws_subnet.private_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0513bd4904af9d438",
            "route_table_id": "rtb-021ddd443d3700e39",
            "subnet_id": "subnet-07372b84743674040"
          },
          "depends_on": [
            "aws_route_table.rt_public",
            "aws_subnet.public_subnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-097e25cb1079824c7",
            "route_table_id": "rtb-021ddd443d3700e39",
            "subnet_id": "subnet-0265648bc54260165"
          },
          "depends_on": [
            "aws_route_table.rt_public",
            "aws_subnet.public_subnet"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fbc9549e67779f68",
            "route_table_id": "rtb-021ddd443d3700e39",
            "subnet_id": "subnet-07a345f6b7799e7fc"
          },
          "depends_on": [
            "aws_route_table.rt_public",
            "aws_subnet.public_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "worker",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0529fcefd76b52411",
            "route_table_id": "rtb-0b061766857e9457a",
            "subnet_id": "subnet-0a49f147677683610"
          },
          "depends_on": [
            "aws_route_table.rt_private",
            "aws_subnet.worker_subnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b8786a862f01cab9",
            "route_table_id": "rtb-0b061766857e9457a",
            "subnet_id": "subnet-00a3868c669463e28"
          },
          "depends_on": [
            "aws_route_table.rt_private",
            "aws_subnet.worker_subnet"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c85ecc88c06f246c",
            "route_table_id": "rtb-0b061766857e9457a",
            "subnet_id": "subnet-0465c0d1acacbcf14"
          },
          "depends_on": [
            "aws_route_table.rt_private",
            "aws_subnet.worker_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster-sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:213745435605:security-group/sg-0e2044fbaa6f8e8bf",
            "description": "Cluster communication with worker nodes",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e2044fbaa6f8e8bf",
            "ingress": [],
            "name": "clusterSG",
            "name_prefix": null,
            "owner_id": "213745435605",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "cluster"
            },
            "timeouts": null,
            "vpc_id": "vpc-0764e590e1fdf1dd6"
          }
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_alb_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:213745435605:security-group/sg-08962f3d04b68b146",
            "description": "Allow worker nodes pods to communicate with outsiders",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08962f3d04b68b146",
            "ingress": [],
            "name": "eks-alb-loadbalancer-sg",
            "name_prefix": null,
            "owner_id": "213745435605",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "eks-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0764e590e1fdf1dd6"
          }
        }
      ]
    },
    {
      "module": "module.kubernetes-server",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "kubernetes-server-instance-sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:213745435605:security-group/sg-0074a17bcc4ea0f08",
            "description": "kubectl_instance_sg",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0074a17bcc4ea0f08",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "kubernetes-server-instance-sg",
            "name_prefix": null,
            "owner_id": "213745435605",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-0764e590e1fdf1dd6"
          }
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "worker-node-sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:213745435605:security-group/sg-04dcf4a2a3a6ca9a5",
            "description": "Security group for all nodes in the cluster",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04dcf4a2a3a6ca9a5",
            "ingress": [],
            "name": "worker-nodeSG",
            "name_prefix": null,
            "owner_id": "213745435605",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "worker-node-sg",
              "kubernetes.io/cluster/": "production"
            },
            "timeouts": null,
            "vpc_id": "vpc-0764e590e1fdf1dd6"
          }
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_http",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 80,
            "id": "sgrule-3831455548",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-08962f3d04b68b146",
            "self": false,
            "source_security_group_id": "sg-04dcf4a2a3a6ca9a5",
            "to_port": 80,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.eks_alb_sg",
            "aws_security_group.worker-node-sg"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_https",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 443,
            "id": "sgrule-2920028558",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-08962f3d04b68b146",
            "self": false,
            "source_security_group_id": "sg-04dcf4a2a3a6ca9a5",
            "to_port": 443,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.eks_alb_sg",
            "aws_security_group.worker-node-sg"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_worker_node",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 0,
            "id": "sgrule-1304267640",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-08962f3d04b68b146",
            "self": false,
            "source_security_group_id": "sg-04dcf4a2a3a6ca9a5",
            "to_port": 65535,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.eks_alb_sg",
            "aws_security_group.worker-node-sg"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster-ingress-node-https",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow pods to communicate with the cluster API Server",
            "from_port": 443,
            "id": "sgrule-3480985842",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0e2044fbaa6f8e8bf",
            "self": false,
            "source_security_group_id": "sg-04dcf4a2a3a6ca9a5",
            "to_port": 443,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.cluster-sg",
            "aws_security_group.worker-node-sg"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster-ingress-workstation-https",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow workstation to communicate with the cluster API Server",
            "from_port": 443,
            "id": "sgrule-3104996351",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0e2044fbaa6f8e8bf",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.cluster-sg"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker-node-for-alb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow worker Kubelets and pods to receive communication from alb",
            "from_port": 0,
            "id": "sgrule-317236588",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-04dcf4a2a3a6ca9a5",
            "self": false,
            "source_security_group_id": "sg-08962f3d04b68b146",
            "to_port": 65535,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.eks_alb_sg",
            "aws_security_group.worker-node-sg"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker-node-for-control-server",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow worker Kubelets and pods to receive communication from the control server",
            "from_port": 0,
            "id": "sgrule-2838147110",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-04dcf4a2a3a6ca9a5",
            "self": false,
            "source_security_group_id": "sg-0074a17bcc4ea0f08",
            "to_port": 65535,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.worker-node-sg"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker-node-ingress-cluster",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow worker Kubelets and pods to receive communication from the cluster control plane",
            "from_port": 1025,
            "id": "sgrule-2693865451",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-04dcf4a2a3a6ca9a5",
            "self": false,
            "source_security_group_id": "sg-0e2044fbaa6f8e8bf",
            "to_port": 65535,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.cluster-sg",
            "aws_security_group.worker-node-sg"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker-node-ingress-self",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow node to communicate with each other",
            "from_port": 0,
            "id": "sgrule-2992889458",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-04dcf4a2a3a6ca9a5",
            "self": false,
            "source_security_group_id": "sg-04dcf4a2a3a6ca9a5",
            "to_port": 65535,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.worker-node-sg"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "master_subnet",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:213745435605:subnet/subnet-0ad85a5b85af6d92b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.48.0/20",
            "id": "subnet-0ad85a5b85af6d92b",
            "map_public_ip_on_launch": false,
            "owner_id": "213745435605",
            "tags": {
              "Name": "Master_us-east-1a"
            },
            "vpc_id": "vpc-0764e590e1fdf1dd6"
          },
          "depends_on": [
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:213745435605:subnet/subnet-052d9540f3b2a49f8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.64.0/20",
            "id": "subnet-052d9540f3b2a49f8",
            "map_public_ip_on_launch": false,
            "owner_id": "213745435605",
            "tags": {
              "Name": "Master_us-east-1b"
            },
            "vpc_id": "vpc-0764e590e1fdf1dd6"
          },
          "depends_on": [
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:213745435605:subnet/subnet-0fa7826ce07be5802",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.80.0/20",
            "id": "subnet-0fa7826ce07be5802",
            "map_public_ip_on_launch": false,
            "owner_id": "213745435605",
            "tags": {
              "Name": "Master_us-east-1c"
            },
            "vpc_id": "vpc-0764e590e1fdf1dd6"
          },
          "depends_on": [
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:213745435605:subnet/subnet-08c6c33233a731358",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.228.0/22",
            "id": "subnet-08c6c33233a731358",
            "map_public_ip_on_launch": false,
            "owner_id": "213745435605",
            "tags": {
              "Name": "Private_subnet_us-east-1a",
              "kubernetes.io/cluster/production": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0764e590e1fdf1dd6"
          },
          "depends_on": [
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:213745435605:subnet/subnet-075b1d4d3ad4addfc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.232.0/22",
            "id": "subnet-075b1d4d3ad4addfc",
            "map_public_ip_on_launch": false,
            "owner_id": "213745435605",
            "tags": {
              "Name": "Private_subnet_us-east-1b",
              "kubernetes.io/cluster/production": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0764e590e1fdf1dd6"
          },
          "depends_on": [
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:213745435605:subnet/subnet-06ae52c12fb1e93d8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.236.0/22",
            "id": "subnet-06ae52c12fb1e93d8",
            "map_public_ip_on_launch": false,
            "owner_id": "213745435605",
            "tags": {
              "Name": "Private_subnet_us-east-1c",
              "kubernetes.io/cluster/production": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0764e590e1fdf1dd6"
          },
          "depends_on": [
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:213745435605:subnet/subnet-07372b84743674040",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.204.0/22",
            "id": "subnet-07372b84743674040",
            "map_public_ip_on_launch": false,
            "owner_id": "213745435605",
            "tags": {
              "Name": "Public_subnet_us-east-1a",
              "kubernetes.io/cluster/production": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0764e590e1fdf1dd6"
          },
          "depends_on": [
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:213745435605:subnet/subnet-0265648bc54260165",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.208.0/22",
            "id": "subnet-0265648bc54260165",
            "map_public_ip_on_launch": false,
            "owner_id": "213745435605",
            "tags": {
              "Name": "Public_subnet_us-east-1b",
              "kubernetes.io/cluster/production": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0764e590e1fdf1dd6"
          },
          "depends_on": [
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:213745435605:subnet/subnet-07a345f6b7799e7fc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.212.0/22",
            "id": "subnet-07a345f6b7799e7fc",
            "map_public_ip_on_launch": false,
            "owner_id": "213745435605",
            "tags": {
              "Name": "Public_subnet_us-east-1c",
              "kubernetes.io/cluster/production": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0764e590e1fdf1dd6"
          },
          "depends_on": [
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "worker_subnet",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:213745435605:subnet/subnet-0a49f147677683610",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.144.0/20",
            "id": "subnet-0a49f147677683610",
            "map_public_ip_on_launch": false,
            "owner_id": "213745435605",
            "tags": {
              "Name": "Worker_us-east-1a"
            },
            "vpc_id": "vpc-0764e590e1fdf1dd6"
          },
          "depends_on": [
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:213745435605:subnet/subnet-00a3868c669463e28",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.160.0/20",
            "id": "subnet-00a3868c669463e28",
            "map_public_ip_on_launch": false,
            "owner_id": "213745435605",
            "tags": {
              "Name": "Worker_us-east-1b"
            },
            "vpc_id": "vpc-0764e590e1fdf1dd6"
          },
          "depends_on": [
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:213745435605:subnet/subnet-0465c0d1acacbcf14",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.176.0/20",
            "id": "subnet-0465c0d1acacbcf14",
            "map_public_ip_on_launch": false,
            "owner_id": "213745435605",
            "tags": {
              "Name": "Worker_us-east-1c"
            },
            "vpc_id": "vpc-0764e590e1fdf1dd6"
          },
          "depends_on": [
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:213745435605:vpc/vpc-0764e590e1fdf1dd6",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-05b7c19cbde4b4a3f",
            "default_route_table_id": "rtb-0d86869ea4e377c75",
            "default_security_group_id": "sg-098274b694b662795",
            "dhcp_options_id": "dopt-28d8d751",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0764e590e1fdf1dd6",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0d86869ea4e377c75",
            "owner_id": "213745435605",
            "tags": {
              "Name": "VPC_name"
            }
          }
        }
      ]
    }
  ]
}